AkshayVispute-Salesforce/akshay.vispute@eternussolutions.com/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Department_Id__c</fullName>
        <displayFormat>DEP-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Department Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Department</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>